<resources>

    <string name="app_name">运营SDK</string>
    
    <!-- For main.xml -->
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="server">设服务器</string>
    <string name="check_apk">检查更新</string>
    <string name="update_apk">检查更新</string>
    <string name="pay">充值</string>
    <string name="user">用户信息</string>
    <string name="start_pay">开始充值</string>
    <string name="delete_account">删除账号</string>
    <string name="account">要删除的账户名</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="isLogin">检查登录</string>
    <string name="logging">账号在登录状态</string>
    <string name="not_logging">账号不在登录状态</string>
    <string name="set_orirentation">是否横屏（勾上为横屏, 下次启动生效）</string>
    <string name="demo_switch_account">切换帐号</string>
    <!--string name=""></string-->

</resources>
