<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onLoginButtonClicked"
                        android:text="@string/login" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onSwitchAccountButtonClicked"
                        android:text="@string/demo_switch_account" />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onIsLoginButtonClicked"
                        android:text="@string/isLogin" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onLogoutButtonClicked"
                        android:text="@string/logout" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onUpdateButtonClicked"
                        android:text="@string/update_apk" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/user"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onUserButtonClicked"
                        android:text="@string/user" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onRechargeButtonClicked"
                        android:text="@string/pay" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onServerButtonClicked"
                        android:text="@string/server" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:onClick="onRemoveAccountButtonClicked"
                        android:text="@string/delete_account" />
                </TableRow>
            </TableLayout>

            <CheckBox
                android:id="@+id/ori_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/set_orirentation" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>